[gd_scene load_steps=6 format=3 uid="uid://8hd5gec3f71l"]

[ext_resource type="Script" uid="uid://cl88kjxvd6r6l" path="res://Scripts/GameScripts/HUD/combat_screen.gd" id="1_tt2g6"]
[ext_resource type="PackedScene" uid="uid://byvoiyqkydyyy" path="res://Scenes/Effects/vfx.tscn" id="2_tt2g6"]
[ext_resource type="Texture2D" uid="uid://50xla8va4516" path="res://Assets/Art/Backgrounds/SkyBackground.png" id="3_hpsiu"]
[ext_resource type="Texture2D" uid="uid://b10hojgyboxa1" path="res://Assets/Art/Backgrounds/GrassTileBackgroundL.png" id="4_qdguw"]
[ext_resource type="Texture2D" uid="uid://ck3t8r5gafkku" path="res://Assets/Art/Backgrounds/WaterTileBackgroundR.png" id="5_5f7qg"]

[node name="CombatScreen" type="CanvasLayer" node_paths=PackedStringArray("PlayerPosition", "EnemyPosition", "Background", "DefenderBackground", "AttackerBackground")]
script = ExtResource("1_tt2g6")
VfxScene = ExtResource("2_tt2g6")
PlayerPosition = NodePath("PlayerPosition")
EnemyPosition = NodePath("EnemyPosition")
Background = NodePath("Background")
DefenderBackground = NodePath("DefenderBackground")
AttackerBackground = NodePath("AttackerBackground")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Background" type="TextureRect" parent="."]
z_index = -6
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hpsiu")

[node name="DefenderBackground" type="TextureRect" parent="."]
z_index = -5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 16.0
offset_right = 160.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qdguw")
stretch_mode = 2

[node name="AttackerBackground" type="TextureRect" parent="."]
z_index = -4
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 16.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_5f7qg")
stretch_mode = 2

[node name="PlayerPosition" type="Marker2D" parent="."]
z_index = 5
position = Vector2(70, 128)

[node name="EnemyPosition" type="Marker2D" parent="."]
z_index = 5
position = Vector2(250, 128)
